--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@
   --social: #afb1b8;
 }
 
+/* general variables used throughout the website design */
+
 body {
   font-family: 'Roboto', 'Raleway', sans-serif;
   color: var(--grayhey);
@@ -49,7 +51,10 @@ li {
   list-style-type: none;
 }
 
+/* component header: menu and contact details */
+
 .header {
+  display: flex;
   align-items: center;
   width: 100%;
   height: 80px;
@@ -58,32 +63,137 @@ li {
   border-bottom: 1px solid var(--border-header);
 }
 
-.webstudio {
-  margin-top: 24px;
-  margin-bottom: 25px;
-  margin-top: 24px;
+.header__menu {
+  display: flex;
+  align-items: center;
 }
 
-.position-h3-2 {
-  padding-top: 94px;
-  padding-bottom: 50px;
-  background-color: var(--whatitis);
+.header__menu-logo--color {
+  color: var(--kamikaze);
 }
 
-.container2 {
-  padding-top: 200px;
-  text-align: center;
+.header__menu-logo {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.193;
+  text-decoration: none;
+  color: var(--blackhawk);
 }
 
-.gray-box {
+.header__menu-list {
+  display: flex;
+  position: relative;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+}
+
+.header__menu-list--active-first::after {
+  content: '';
+  display: block;
+  width: 58px;
+  height: 4px;
+  left: 93px;
+  top: 47px;
+  background: var(--kamikaze);
+  border-radius: 2px;
+  position: absolute;
+}
+
+.header__menu-list--active-second::after {
+  content: '';
+  display: block;
+  width: 58px;
+  height: 4px;
+  left: 192px;
+  top: 47px;
+  background: var(--kamikaze);
+  border-radius: 2px;
+  position: absolute;
+}
+
+.header__menu-list--enable {
+  color: var(--kamikaze);
+  font-weight: 500;
+}
+
+.header__menu-list--disable {
+  color: var(--blackhaw);
+  font-weight: 500;
+}
+
+.header__menu-list-agency {
+  margin-left: 93px;
+}
+
+.header__menu-list-portfolio,
+.header__menu-list-contact {
+  padding-left: 46px;
+}
+
+.header__menu-list-email {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 345px;
+  fill: var(--grayhey);
+}
+
+.header__menu-list-phone {
+  padding-left: 50px;
+  fill: var(--grayhey);
+}
+
+.header__menu-list-email--color,
+.header__menu-list-phone--color {
+  color: var(--grayhey);
+  font-weight: 500;
+}
+
+.header__menu-list-phone--color:hover,
+.header__menu-list-phone--color:focus,
+.header__menu-list-email--color:hover,
+.header__menu-list-email--color:focus,
+.header__menu-list-agency:focus,
+.header__menu-list-agency:hover,
+.header__menu-list-portfolio:focus,
+.header__menu-list-portfolio:hover,
+.header__menu-list-contact:focus,
+.header__menu-list-contact:hover,
+.link:focus,
+.link:hover,
+.fill:hover {
+  color: var(--kamikaze);
+  fill: var(--kamikaze);
+  transition: 0.5s;
+}
+
+/* component wallpaper with heading and button  - people in job ( I hope so) */
+
+.wallpaper {
   width: 1600px;
   height: 600px;
   border-radius: 0px;
   background-color: var(--shark);
   color: var(--whitehihi);
+  background-image: url('../images/img.png');
 }
 
-.button {
+.wallpaper__heading {
+  padding-top: 200px;
+  text-align: center;
+}
+
+.wallpaper__button {
+  padding-top: 30px;
+  padding-left: 700px;
+  padding-right: 700px;
+}
+
+.wallpaper__button-specification {
   width: 200px;
   height: 50px;
   color: var(--whitehihi);
@@ -101,81 +211,39 @@ li {
   border-style: none;
 }
 
-.position-button {
-  padding-top: 30px;
-  padding-left: 700px;
-  padding-right: 700px;
+/* four picture boxes: satellite, clock, computer, astronaut. The pictures are accompanied by descriptions. */
+
+.boxes {
+  background-color: var(--whitehihi);
+  padding-top: 80px;
 }
 
-.link-agency {
-  color: var(--blackhaw);
-  font-weight: 500;
+.boxes__items {
+  display: flex;
+  list-style: none;
 }
 
-.link-default {
-  color: var(--blackhaw);
-  font-weight: 500;
+.boxes__items--position {
+  margin: 15px;
+  position: relative;
 }
 
-.link-agency::after {
-  content: '';
-  display: block;
-  width: 53px;
-  height: 4px;
-  left: 93px;
-  top: 47px;
-  background: var(--kamikaze);
-  border-radius: 2px;
-  position: absolute;
+.lorem-ipsum {
+  font-weight: 700;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-align: left;
+  color: var(--blackho);
 }
 
-.link-portfolio::after {
-  content: '';
-  display: block;
-  width: 58px;
-  height: 4px;
-  left: 192px;
-  top: 45px;
-  background: var(--kamikaze);
-  border-radius: 2px;
-  position: absolute;
-}
-
-.link-2 {
-  color: var(--grayhey);
-  font-weight: 500;
-}
-
-.link-2:hover {
-  color: var(--kamikaze);
-  transition: 0.5s;
-}
-
-.link-2:hover,
-.link-2:focus,
-.link:focus,
-.link:hover,
-.fill:hover {
-  color: var(--kamikaze);
-  transition: 0.5s;
+.position-h3-2 {
+  padding-top: 94px;
+  padding-bottom: 50px;
+  background-color: var(--whatitis);
 }
 
 a {
   text-decoration: none;
-}
-
-.decor {
-  color: var(--kamikaze);
-}
-
-.logo {
-  font-family: 'Raleway';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.193;
-  text-decoration: none;
-  color: var(--blackhawk);
 }
 
 .logo-footer {
@@ -205,14 +273,6 @@ a {
   height: 75px;
   line-height: 24px;
   color: var(--grayhey);
-}
-
-.lorem-ipsum {
-  font-weight: 700;
-  line-height: 16px;
-  letter-spacing: 0.03em;
-  text-align: left;
-  color: var(--blackho);
 }
 
 .colorweb {
@@ -278,16 +338,6 @@ p[class='text-picture'] {
   margin-bottom: 20px;
 }
 
-.four-boxes {
-  background-color: var(--whitehihi);
-  padding-top: 80px;
-}
-
-.location-lorem-ipsum {
-  display: flex;
-  list-style: none;
-}
-
 .location-what-we-do {
   display: flex;
   list-style: none;
@@ -301,11 +351,6 @@ p[class='text-picture'] {
 
 .background {
   background-color: var(--whatitis);
-}
-
-.margin-lorem-ipsum {
-  margin: 15px;
-  position: relative;
 }
 
 .photo-box {
@@ -367,47 +412,6 @@ p[class='text-picture'] {
   padding: 94px 0;
 }
 
-.header {
-  display: flex;
-}
-
-.nav-list {
-  display: flex;
-  position: relative;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 16px;
-  letter-spacing: 0.02em;
-}
-
-.menu {
-  display: flex;
-  align-items: center;
-}
-
-.agency {
-  margin-left: 93px;
-}
-
-.portfolio,
-.contact {
-  padding-left: 46px;
-}
-
-.email {
-  padding-left: 345px;
-}
-
-.tel {
-  padding-left: 50px;
-}
-
-.icon-header {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .icon-header-spacing {
   margin-right: 10px;
 }
@@ -434,10 +438,6 @@ p[class='text-picture'] {
   margin-top: 16px;
   margin-right: 5px;
   margin-left: 5px;
-}
-
-.foto-graybox {
-  background-image: url('../images/img.png');
 }
 
 .border-box {
@@ -869,4 +869,14 @@ input:checked::before {
   text-decoration: underline;
   color: var(--kamikaze);
   cursor: pointer;
+}
+
+.icon-header-client {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.link-2:hover {
+  color: var(--kamikaze);
+  transition: 0.5s;
 }
