--- a/css/main.css
+++ b/css/main.css
@@ -261,18 +261,26 @@ label:focus-within svg {
   background-image: url("../images/img.png");
 }
 
+.xxx {
+  position: absolute;
+  width: 1600px;
+  height: 600px;
+  background: rgba(47, 48, 58, 0.4);
+}
+
 .wallpaper__heading {
   padding-top: 200px;
   text-align: center;
 }
 
 .wallpaper__button {
-  padding-top: 30px;
+  padding-top: 350px;
   padding-left: 700px;
   padding-right: 700px;
 }
 
 .wallpaper__button-specification {
+  position: relative;
   width: 200px;
   height: 50px;
   color: var(--whitehihi);
