--- a/sass/components/_wallpaper-button.scss
+++ b/sass/components/_wallpaper-button.scss
@@ -1,10 +1,11 @@
 .wallpaper__button {
-  padding-top: 30px;
+  padding-top: 350px;
   padding-left: 700px;
   padding-right: 700px;
 }
 
 .wallpaper__button-specification {
+  position: relative;
   width: 200px;
   height: 50px;
   color: var(--whitehihi);
