--- a/sass/components/_wallpaper.scss
+++ b/sass/components/_wallpaper.scss
@@ -8,8 +8,13 @@
   background-image: url('../images/img.png');
 }
 
+.xxx {
+  position: absolute;
+  width: 1600px;
+  height: 600px;
+  background: rgba(47, 48, 58, 0.4);
+}
 .wallpaper__heading {
   padding-top: 200px;
   text-align: center;
 }
-
