--- a/sass/components/_wallpaper-button.scss
+++ b/sass/components/_wallpaper-button.scss
@@ -22,3 +22,11 @@
   border: none;
   border-style: none;
 }
+
+.wallpaper__button-specification:hover {
+  background: var(--whitehihi);
+  box-shadow: 0px 4px 4px var(--shadow-one);
+  border-radius: 4px;
+  transition:ease-in 250ms;
+  color: var(--kamikaze);
+}
