--- a/sass/components/_wallpaper.scss
+++ b/sass/components/_wallpaper.scss
@@ -8,7 +8,7 @@
   background-image: url('../images/img.png');
 }
 
-.xxx {
+.wallpaper__background {
   position: absolute;
   width: 1600px;
   height: 600px;
