--- a/css/main.css
+++ b/css/main.css
@@ -190,7 +190,7 @@ label:focus-within svg {
 }
 
 .header__menu-list--disable {
-  color: var(--blackhaw);
+  color: var(--blackhawk);
   font-weight: 500;
 }
 
@@ -204,15 +204,7 @@ label:focus-within svg {
 }
 
 .header__menu-list-email {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  position: relative;
   padding-left: 345px;
   fill: var(--grayhey);
 }
@@ -223,7 +215,7 @@ label:focus-within svg {
 }
 
 .header__menu-list--spacing {
-  margin-right: 10px;
+  margin-right: 5px;
 }
 
 .header__menu-list-email--color,
@@ -251,6 +243,16 @@ label:focus-within svg {
   transition: 0.5s;
 }
 
+.header__menu-list-phone--position {
+  position: relative;
+  bottom: 2px;
+}
+
+.header__menu-list-email--position {
+  position: relative;
+  bottom: 1px;
+}
+
 /* component wallpaper with heading and button  - people in job ( I hope so) */
 .wallpaper {
   width: 1600px;
@@ -261,7 +263,7 @@ label:focus-within svg {
   background-image: url("../images/img.png");
 }
 
-.xxx {
+.wallpaper__background {
   position: absolute;
   width: 1600px;
   height: 600px;
@@ -297,6 +299,16 @@ label:focus-within svg {
   cursor: pointer;
   border: none;
   border-style: none;
+}
+
+.wallpaper__button-specification:hover {
+  background: var(--whitehihi);
+  -webkit-box-shadow: 0px 4px 4px var(--shadow-one);
+          box-shadow: 0px 4px 4px var(--shadow-one);
+  border-radius: 4px;
+  -webkit-transition: ease-in 250ms;
+  transition: ease-in 250ms;
+  color: var(--kamikaze);
 }
 
 /* four picture boxes: satellite, clock, computer, astronaut. 
@@ -441,6 +453,7 @@ The pictures are accompanied by descriptions. */
   margin-left: 15px;
   margin-right: 15px;
   fill: var(--gray-special);
+  cursor: pointer;
 }
 
 .customers__box:hover,
