--- a/css/styles.css
+++ b/css/styles.css
@@ -89,16 +89,16 @@ body {
   color: var(--gray);
 }
 
-.section--padding-top {
+.section-padding-top {
   padding-top: 94px;
 }
 
-.section--padding-bottom {
+.section-padding-bottom {
   padding-bottom: 94px;
 }
 
-.article,
-.heading__image,
+.four-boxes__article,
+.solution__image,
 .our-team__person,
 .address,
 .btn,
@@ -193,13 +193,13 @@ body {
   color: var(--blue);
 }
 
-.wallpaper {
+.efective-solution-body {
   background: var(--gray-second);
   text-align: center;
   height: 600px;
 }
 
-.image {
+.efective-solution-body__image {
   background-image: url('../images/img.png');
   background-position: center;
   background-repeat: no-repeat;
@@ -209,7 +209,16 @@ body {
   position: relative;
 }
 
-.wallpaper__heading {
+.efective-solution-body__image::after {
+  content: '';
+  width: 100%;
+  height: 600px;
+  background: rgba(47, 48, 58, 0.4);
+  display: flex;
+  position: absolute;
+  top: 0;
+}
+.efective-solution-body__heading {
   font-size: 44px;
   font-weight: 900;
   line-height: 1.36;
@@ -220,17 +229,7 @@ body {
   padding-bottom: 30px;
 }
 
-.image::after {
-  content: '';
-  width: 100%;
-  height: 600px;
-  background: rgba(47, 48, 58, 0.4);
-  display: flex;
-  position: absolute;
-  top: 0;
-}
-
-.button__item {
+.button__order-the-service {
   background: var(--blue);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -245,8 +244,8 @@ body {
   color: var(--white);
 }
 
-.button__item:focus,
-.button__item:hover,
+.button__order-the-service:focus,
+.button__order-the-service:hover,
 .button-send:hover,
 .button-send:focus {
   background: var(--button-color);
@@ -256,23 +255,24 @@ body {
   transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
 
-.article--flex {
+.four-boxes {
   display: flex;
   gap: 30px;
 }
 
-.size-group {
+.four-boxes__image {
   width: 270px;
   height: 120px;
 }
-.article__heading {
+
+.four-boxes__heading {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   color: var(--black-second);
 }
 
-.article__summary {
+.four-boxes__summary {
   font-size: 14px;
   font-weight: 400;
   line-height: 1.71;
@@ -280,7 +280,7 @@ body {
   color: var(--gray);
 }
 
-.heading {
+.solution {
   font-size: 36px;
   font-weight: 700;
   line-height: 1.16;
@@ -289,7 +289,7 @@ body {
   text-align: center;
 }
 
-.images-flex {
+.images-space-between {
   display: flex;
   justify-content: space-between;
 }
@@ -365,7 +365,6 @@ body {
   fill: var(--white);
   transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
-
 
 .our-clients {
   display: flex;
@@ -832,7 +831,7 @@ textarea:focus {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.heading__image {
+.solution__image {
   position: relative;
 }
 .what-we-do {
