--- a/css/styles.css
+++ b/css/styles.css
@@ -294,7 +294,7 @@ body {
   justify-content: space-between;
 }
 
-.out-team--background {
+.out-team-background {
   background: var(--color-team);
 }
 
