--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,9 @@ body {
   justify-content: flex-end;
   align-content: center;
 }
+
 .header__menu__item {
+  position: relative;
   margin-left: 46px;
   text-decoration: none;
   list-style: none;
@@ -153,19 +155,7 @@ body {
 .header__menu__item--blue-bottom-agency::after {
   content: '';
   display: block;
-  width: 53px;
-  height: 4px;
-  margin-left: 46px;
-  margin-top: 29px;
-  background: #2196f3;
-  border-radius: 2px;
-  position: absolute;
-}
-
-.header__menu__item--blue-bottom-portfolio::after {
-  content: '';
-  display: block;
-  width: 58px;
+  width: 100%;
   height: 4px;
   margin-left: 46px;
   margin-top: 29px;
