--- a/css/styles.css
+++ b/css/styles.css
@@ -64,9 +64,20 @@ ul {
   height: 80px;
   align-items: center;
   justify-content: space-between;
+  width: 1200px;
+  margin: 0 auto;
+  position: relative;
+  z-index: 1;
 }
 
 .container {
+  width: 1200px;
+  margin: 0 auto;
+  position: relative;
+  z-index: 1;
+}
+
+.article__container {
   width: 1200px;
   margin: 0 auto;
   position: relative;
@@ -128,6 +139,17 @@ body {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  gap: 32px;
+}
+
+.navbar__contact {
+  gap: 16px;
+  display: flex;
+  list-style: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
 .header__menu__container--gap {
@@ -142,38 +164,42 @@ body {
 
 .header__menu__item {
   position: relative;
-  margin-left: 46px;
+  margin: 2px;
   text-decoration: none;
-  list-style: none;
   color: var(--black-second);
+  display: flex;
+  align-items: center;
+}
+
+.header__menu__contact {
+  text-decoration: none;
+  position: relative;
+  margin: 2px;
+  color: var(--gray);
+  display: flex;
+  align-items: center;
 }
 
 .header__menu__item--active {
   color: var(--blue);
 }
 
-.header__menu__item--blue-bottom-agency::after {
+.header__menu__item--active::after {
   content: '';
   display: block;
   width: 100%;
   height: 4px;
-  margin-left: 46px;
   margin-top: 29px;
   background: #2196f3;
   border-radius: 2px;
   position: absolute;
+  top: 100%;
+  left: 0;
 }
 
-.header__menu__contact {
-  text-decoration: none;
-  list-style: none;
-  color: var(--gray);
+.navbar__contact {
   display: flex;
-  align-items: center;
-}
-
-.header__menu__contact--padding {
-  margin-left: 50px;
+  gap: 50px;
 }
 
 .header__menu__item:hover,
